# DaedalusLinker

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
inc/: DaedalusLinker.hpp  DaedalusLinkerBase.hpp  DaedalusLinkerWithComments.hpp  DaedalusLinkerWithoutComments.hpp  FilePathExtractor.hpp  GlobalFlagsContainer.hpp
src/: DaedalusLinker.cpp  DaedalusLinkerBase.cpp  DaedalusLinkerWithComments.cpp  DaedalusLinkerWithoutComments.cpp  FilePathExtractor.cpp  GlobalFlagsContainer.cpp  dLinker.cpp
ut/: main.cpp  ut.cpp
ut/TestFilePathExtractor/: TestFilePathExtractor.cpp  TestFilePathExtractor.hpp
ut/TestGlobalFlagsContainer/: TestGlobalFlagsContainer.cpp  TestGlobalFlagsContainer.hpp
